# spoterm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.ja.md  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: PLAN.md  manual-tests.md
docs/design/: README.md  auth-client.md  device-use.md  devices.md  lib.md  match-name.md  playback.md  playlist.md  search.md  status.md
src/: art.rs  auth.rs  cli.rs  config.rs  format.rs  main.rs  match_name.rs  np_json.rs  test_fixtures.rs  theme.rs
src/commands/: device.rs  devices.rs  lib.rs  mod.rs  nowplaying.rs  playback.rs  playlist.rs  search.rs  status.rs
src/tui/: art.rs  browse.rs  detail.rs  devices.rs  mod.rs  playback.rs  queue.rs  rate_limit.rs  search.rs  theme.rs  view.rs
