[package]
name = "spoterm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
rspotify = { version = "0.16.1", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
toml = "1.1.3"
