[package]
name = "spotterm"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Spotify を操作する CLI / TUI（公式 Web API・PKCE 認証）"
repository = "https://github.com/kinzaru3/spotterm"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ratatui = "0.30"
# ratatui 0.30 対応版に固定（ratatui-image は minor でも ratatui 依存を上げるため、
# `cargo update` で ratatui 0.31 要求版を引かないよう exact pin にしている）。
ratatui-image = { version = "=11.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rspotify = { version = "0.16.1", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
toml = "1.1.3"
unicode-width = "0.2"

[dev-dependencies]
# HTTP mock server for testing the API glue (request building + response parsing)
# without touching the real Spotify API. Used by the per-command `execute` tests.
wiremock = "0.6"
